MDEV-35713 UBSAN: runtime error: load of value 1341112147, which is not a valid value for type 'enum enum_schema_tables' in optimize_for_get_all_tables and get_all_tables and on SELECT from I_S geometry_columns.

get_schema_table_idx() returns garbage if the SCHEMA table comes
from a plugin. Added specific value to reflect this.